# ai-sales-agent-demo

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  hello.py
